Added get paginated Forum
